--- a/src/main/resources/project-info-reports_de.properties
+++ b/src/main/resources/project-info-reports_de.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = Dieses Proj
 report.ci-management.cruisecontrol.intro                           = Dieses Projekt verwendet {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Informationen \u00fcber das Continuous-Integration-System dieses Projektes.
 report.ci-management.general.intro                                 = Dieses Projekt verwendet ein Continuous Integration System.
+report.ci-management.github.intro                                  = Dieses Projekt verwendet {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = Dieses Projekt verwendet {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Dieses Projekt verwendet {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Dieses Projekt verwendet {Luntbuild, http://luntbuild.javaforge.com/}.
