--- a/src/main/resources/project-info-reports_es.properties
+++ b/src/main/resources/project-info-reports_es.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = Este proyec
 report.ci-management.cruisecontrol.intro                           = Este proyecto usa {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Enlace a las definiciones de los procesos de integraci\u00f3n continua que construyen y prueban el c\u00f3digo de forma frecuente y regular.
 report.ci-management.general.intro                                 = Este proyecto usa un Sistema de Integraci\u00f3n Continua
+report.ci-management.github.intro                                  = Este proyecto usa {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = Este proyecto usa {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Este proyecto usa {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Este proyecto usa {Luntbuild, http://luntbuild.javaforge.com/}.
