--- a/src/main/resources/project-info-reports_fr.properties
+++ b/src/main/resources/project-info-reports_fr.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = Ce projet u
 report.ci-management.cruisecontrol.intro                           = Ce projet utilise {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = C'est un lien au syst\u00e8me d'int\u00e9gration continue pour ce projet qui construit et teste le code de mani\u00e8re fr\u00e9quente.
 report.ci-management.general.intro                                 = Ce projet utilise un syst\u00e8me d'int\u00e9gration continue.
+report.ci-management.github.intro                                  = Ce projet utilise {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = Ce projet utilise {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Ce projet utilise {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Ce projet utilise {Luntbuild, http://luntbuild.javaforge.com/}.
