--- a/src/main/resources/project-info-reports_it.properties
+++ b/src/main/resources/project-info-reports_it.properties
@@ -21,6 +21,7 @@ report.ci-management.bamboo.intro                                  = Questo prog
 report.ci-management.buildforge.intro                              = Questo progetto usa {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
 report.ci-management.continuum.intro                               = Questo progetto usa {Continuum, http://continuum.apache.org/}.
 report.ci-management.cruisecontrol.intro                           = Questo progetto usa {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.github.intro                                  = Questo progetto usa {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = Questo progetto usa {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Questo progetto usa {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Questo progetto usa {Luntbuild, http://luntbuild.javaforge.com/}.
