--- a/src/main/resources/project-info-reports_ko.properties
+++ b/src/main/resources/project-info-reports_ko.properties
@@ -21,6 +21,7 @@ report.ci-management.bamboo.intro                                  = \uc774 \ud5
 report.ci-management.buildforge.intro                              = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.continuum.intro                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Continuum, http://continuum.apache.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.cruisecontrol.intro                           = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {CruiseControl, http://cruisecontrol.sourceforge.net/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.ci-management.github.intro                                  = \uC774 \uD504\uB85C\uC81D\uD2B8\uB294 {GitHub Actions, https://github.com/features/actions/}\uC744 \uC0AC\uC6A9\uD569\uB2C8\uB2E4.
 report.ci-management.hudson.intro                                  = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Hudson, http://hudson-ci.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.jenkins.intro                                 = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Jenkins, https://www.jenkins.io/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.luntbuild.intro                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Luntbuild, http://luntbuild.javaforge.com/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
