--- a/src/main/resources/project-info-reports_lt.properties
+++ b/src/main/resources/project-info-reports_lt.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = \u0160is pr
 report.ci-management.cruisecontrol.intro                           = \u0160is projektas naudoja {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Nuoroda \u012f testinio integravimo apra\u0161us, kurie periodi\u0161kai vykdo programos surinkimui ir testavim\u0105.
 report.ci-management.general.intro                                 = \u0160is projektas naudoja testin\u0119 integravimo sistem\u0105.
+report.ci-management.github.intro                                  = \u0160is projektas naudoja {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = \u0160is projektas naudoja {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = \u0160is projektas naudoja {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = \u0160is projektas naudoja {Luntbuild, http://luntbuild.javaforge.com/}.
