--- a/src/main/resources/project-info-reports_nl.properties
+++ b/src/main/resources/project-info-reports_nl.properties
@@ -22,6 +22,7 @@ report.ci-management.continuum.intro                               = Dit project
 report.ci-management.cruisecontrol.intro                           = Dit project gebruikt {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Dit is een link naar de definities van alle continuous integration processen, die code bouwen en testen op een frequente reguliere basis.
 report.ci-management.general.intro                                 = Dit project gebruikt Continuous Integration System.
+report.ci-management.github.intro                                  = Dit project gebruikt {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = Dit project gebruikt {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Dit project gebruikt {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Dit project gebruikt {Luntbuild, http://luntbuild.javaforge.com/}.
