--- a/src/main/resources/project-info-reports_no.properties
+++ b/src/main/resources/project-info-reports_no.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = Dette prosj
 report.ci-management.cruisecontrol.intro                           = This project uses {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Dette er en lenke til definisjoner av alle kontinuerlig intgrasjon prosesser som bygger og tester kode p\u00E5 ofte og regul\u00E6r basis.
 report.ci-management.general.intro                                 = Dette prosjektet bruker kontinuerlig bygge system.
+report.ci-management.github.intro                                  = Dette prosjektet bruker {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = Dette prosjektet bruker {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Dette prosjektet bruker {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Dette prosjektet bruker {Luntbuild, http://luntbuild.javaforge.com/}.
