--- a/src/main/resources/project-info-reports_pl.properties
+++ b/src/main/resources/project-info-reports_pl.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = Projekt ten
 report.ci-management.cruisecontrol.intro                           = Projekt ten u\u017Cywa systemu {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Poni\u017Cej znajduje si\u0119 \u0142\u0105cze do definicji wszystkich system\u00F3w Continuous Integration, kt\u00F3re regularnie i cz\u0119sto kompiluj\u0105 i testuj\u0105 kod.
 report.ci-management.general.intro                                 = Projekt ten u\u017Cywa systemu Continuous Integration.
+report.ci-management.github.intro                                  = Projekt ten u\u017Cywa systemu {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = Projekt ten u\u017Cywa systemu {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Projekt ten u\u017Cywa systemu {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Projekt ten u\u017Cywa systemu {Luntbuild, http://luntbuild.javaforge.com/}.
