--- a/src/main/resources/project-info-reports_pt_BR.properties
+++ b/src/main/resources/project-info-reports_pt_BR.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = Este projet
 report.ci-management.cruisecontrol.intro                           = Este projeto utiliza o {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Este \u00e9 o endere\u00e7o para a defini\u00e7\u00e3o de todo o processo de integra\u00e7\u00e3o cont\u00ednua. Na integra\u00e7\u00e3o cont\u00ednua a compila\u00e7\u00e3o, montagem e testes s\u00e3o feitos de forma frequente e constante.
 report.ci-management.general.intro                                 = Este projeto utiliza um sistema de integra\u00e7\u00e3o cont\u00ednua.
+report.ci-management.github.intro                                  = Este projeto utiliza o {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = Este projeto utiliza o {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Este projeto utiliza o {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Este projeto utiliza o {Luntbuild, http://luntbuild.javaforge.com/}.
