--- a/src/main/resources/project-info-reports_sk.properties
+++ b/src/main/resources/project-info-reports_sk.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = Tento proje
 report.ci-management.cruisecontrol.intro                           = Tento projekt pou\u017e\u00edva {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Nasledovn\u00e1 linka odkazuje na defin\u00edcie v\u0161etk\u00fdch procesov zaregistrovan\u00fdch v integra\u010dnom syst\u00e9me, ktor\u00e9 pravidelne builduj\u00fa a testuj\u00fa k\u00f3d.
 report.ci-management.general.intro                                 = Tento projekt pou\u017e\u00edva Continuous Integration System (priebe\u017en\u00fd integra\u010dn\u00fd syst\u00e9m).
+report.ci-management.github.intro                                  = Tento projekt pou\u017E\u00EDva {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = Tento projekt pou\u017e\u00edva {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Tento projekt pou\u017e\u00edva {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Tento projekt pou\u017e\u00edva {Luntbuild, http://luntbuild.javaforge.com/}.
