--- a/src/main/resources/project-info-reports_tr.properties
+++ b/src/main/resources/project-info-reports_tr.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = Bu proje Co
 report.ci-management.cruisecontrol.intro                           = This project uses {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Bu link kodlar\u00fd s\u00fdk aral\u00fdklarla ve belirli bir temelde derleyen ve test eden t\u00fcm s\u00fcrekli entegrasyon proseslerine eri\u00feim sa\u00f0lar.
 report.ci-management.general.intro                                 = Bu proje S\u00fcrekli Entegrasyon Sistemi uygulamas\u00fdn\u00fd kullan\u00fdr.
+report.ci-management.github.intro                                  = This project uses {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = This project uses {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = This project uses {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = This project uses {Luntbuild, http://luntbuild.javaforge.com/}.
