--- a/src/main/resources/project-info-reports_zh_CN.properties
+++ b/src/main/resources/project-info-reports_zh_CN.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = \u672C\u987
 report.ci-management.cruisecontrol.intro                           = \u672C\u9879\u76EE\u4F7F\u7528 {CruiseControl, http://cruisecontrol.sourceforge.net/}\u3002
 report.ci-management.description                                   = \u6301\u7EED\u96C6\u6210\u662F\u4EE5\u4E00\u5B9A\u7684\u9891\u7387\u548C\u56FA\u5B9A\u7684\u57FA\u7840\u8FDB\u884C\u4EE3\u7801\u6784\u5EFA\u548C\u6D4B\u8BD5\u7684\u8FC7\u7A0B\uFF0C\u8FD9\u91CC\u5217\u51FA\u4E86\u6240\u6709\u7684\u6301\u7EED\u96C6\u6210\u8FC7\u7A0B\u3002
 report.ci-management.general.intro                                 = \u672C\u9879\u76EE\u4F7F\u7528\u6301\u7EED\u96C6\u6210\u7CFB\u7EDF\u3002
+report.ci-management.github.intro                                  = \u672C\u9879\u76EE\u4F7F\u7528 {GitHub Actions, https://github.com/features/actions/}\u3002
 report.ci-management.hudson.intro                                  = \u672C\u9879\u76EE\u4F7F\u7528 {Hudson, http://hudson-ci.org/}\u3002
 report.ci-management.jenkins.intro                                 = \u672C\u9879\u76EE\u4F7F\u7528 {Jenkins, https://www.jenkins.io/}\u3002
 report.ci-management.luntbuild.intro                               = \u672C\u9879\u76EE\u4F7F\u7528 {Luntbuild, http://luntbuild.javaforge.com/}\u3002
