--- a/src/main/resources/project-info-reports_hu.properties
+++ b/src/main/resources/project-info-reports_hu.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = Ez a projek
 report.ci-management.cruisecontrol.intro                           = Ez a projekt {CruiseControl, http://cruisecontrol.sourceforge.net/} rendszert haszn\u00C3\u00A1l.
 report.ci-management.description                                   = Link a CI folyamatok meghat\u00e1roz\u00e1saira, amelyek rendszeresen \u00e9s gyakran v\u00e9grehajtj\u00e1k a ford\u00edt\u00e1st \u00e9s a tesztel\u00e9st.
 report.ci-management.general.intro                                 = A projekt CI rendszert haszn\u00e1l.
+report.ci-management.github.intro                                  = Ez a projekt {GitHub Actions, https://github.com/features/actions/} rendszert haszn\u00C3\u00A1l.
 report.ci-management.hudson.intro                                  = Ez a projekt {Hudson, http://hudson-ci.org/} rendszert haszn\u00C3\u00A1l.
 report.ci-management.jenkins.intro                                 = Ez a projekt {Jenkins, https://www.jenkins.io/} rendszert haszn\u00C3\u00A1l.
 report.ci-management.luntbuild.intro                               = Ez a projekt {Luntbuild, http://luntbuild.javaforge.com/} rendszert haszn\u00C3\u00A1l.
