--- a/src/main/resources/project-info-reports_pt.properties
+++ b/src/main/resources/project-info-reports_pt.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = Este projec
 report.ci-management.cruisecontrol.intro                           = Este projecto usa o {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Este \u00e9 o endere\u00e7o para a defini\u00e7\u00e3o de todo o processo de integra\u00e7\u00e3o cont\u00ednua que compila e testa o c\u00f3digo de forma frequente e regularmente.
 report.ci-management.general.intro                                 = Este projecto usa um sistema de integra\u00e7\u00e3o cont\u00ednua.
+report.ci-management.github.intro                                  = Este projecto usa o {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = Este projecto usa o {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Este projecto usa o {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Este projecto usa o {Luntbuild, http://luntbuild.javaforge.com/}.
