--- a/src/main/resources/project-info-reports_zh_TW.properties
+++ b/src/main/resources/project-info-reports_zh_TW.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = \u672c\u5c0
 report.ci-management.cruisecontrol.intro                           = \u672c\u5c08\u6848\u4f7f\u7528 {CruiseControl, http://cruisecontrol.sourceforge.net/}\u3002
 report.ci-management.description                                   = \u6301\u7e8c\u6574\u5408\u662f\u4ee5\u56fa\u5b9a\u983b\u7387\u70ba\u57fa\u790e\u4f86\u5efa\u69cb\u53ca\u6e2c\u8a66\u7a0b\u5f0f\u78bc\u7684\u904e\u7a0b\uff0c\u6b64\u9023\u7d50\u5217\u51fa\u6240\u6709\u548c\u6301\u7e8c\u6574\u5408\u904e\u7a0b\u76f8\u95dc\u4e4b\u5b9a\u7fa9\u3002
 report.ci-management.general.intro                                 = \u672c\u5c08\u6848\u4f7f\u7528\u6301\u7e8c\u6574\u5408\u7cfb\u7d71 (Continuous Integration System)\u3002
+report.ci-management.github.intro                                  = \u672C\u5C08\u6848\u4F7F\u7528 {GitHub Actions, https://github.com/features/actions/}\u3002
 report.ci-management.hudson.intro                                  = \u672c\u5c08\u6848\u4f7f\u7528 {Hudson, http://hudson-ci.org/}\u3002
 report.ci-management.jenkins.intro                                 = \u672c\u5c08\u6848\u4f7f\u7528 {Jenkins, https://www.jenkins.io/}\u3002
 report.ci-management.luntbuild.intro                               = \u672c\u5c08\u6848\u4f7f\u7528 {Luntbuild, http://luntbuild.javaforge.com/}\u3002
