--- a/src/main/resources/project-info-reports_zh_CN.properties
+++ b/src/main/resources/project-info-reports_zh_CN.properties
@@ -100,6 +100,11 @@ report.dependency-convergence.stats.readyrelease.success           = \u6210\u529
 report.dependency-convergence.stats.snapshots                      = \u5FEB\u7167\u7248\u672C\u7684artifact\u6570\u76EE(NOS):
 report.dependency-convergence.stats.modules                        = \u5B50\u9879\u76EE\u7684\u6570\u76EE:
 report.dependency-convergence.title                                = \u5806\u5F0F\u4F9D\u8D56\u4E00\u81F4\u6027(Reactor Dependency Convergence)
+report.dependency-info.name                                        = \u4f9d\u8d56\u4fe1\u606f
+report.dependency-info.title                                       = \u4f9d\u8d56\u4fe1\u606f
+report.distribution-management.title                               = \u9879\u76ee\u5206\u914d\u7ba1\u7406
+report.plugins.name                                                = \u63d2\u4ef6
+report.plugin-management.name                                      = \u63d2\u4ef6\u7ba1\u7406
 report.index.nodescription                                         = \u76EE\u524D\u6CA1\u6709\u5BF9\u672C\u9879\u76EE\u7684\u63CF\u8FF0\u3002
 report.index.title                                                 = \u6B22\u8FCE\u6765\u5230
 report.issue-management.bugzilla.intro                             = \u672C\u9879\u76EE\u4F7F\u7528{Bugzilla, http://www.bugzilla.org/}\u3002
