--- a/src/main/resources/project-info-reports_de.properties
+++ b/src/main/resources/project-info-reports_de.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = Zugriff
 report.ci-management.anthill.intro                                 = Dieses Projekt verwendet {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.ci-management.bamboo.intro                                  = Dieses Projekt verwendet {Bamboo, http://www.atlassian.com/software/bamboo/}.
