--- a/src/main/resources/project-info-reports_pl.properties
+++ b/src/main/resources/project-info-reports_pl.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = Dost\u0119p
 report.ci-management.anthill.intro                                 = Projekt ten u\u017Cywa systemu {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.ci-management.bamboo.intro                                  = Projekt ten u\u017Cywa systemu {Bamboo, http://www.atlassian.com/software/bamboo/}.
