--- a/src/main/resources/project-info-reports_ru.properties
+++ b/src/main/resources/project-info-reports_ru.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = \u0414\u043E\u0441\u0442\u0443\u043F
 report.ci-management.anthill.intro                                 = \u0414\u0430\u043D\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442 \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0435\u0442 {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.ci-management.bamboo.intro                                  = \u0414\u0430\u043D\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442 \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0435\u0442 {Bamboo, http://www.atlassian.com/software/bamboo/}.
