--- a/src/main/resources/project-info-reports_fr.properties
+++ b/src/main/resources/project-info-reports_fr.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = Acc\u00e8s
 report.ci-management.anthill.intro                                 = Ce projet utilise {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.ci-management.bamboo.intro                                  = Ce projet utilise {Bamboo, http://www.atlassian.com/software/bamboo/}.
