--- a/src/main/resources/project-info-reports_hu.properties
+++ b/src/main/resources/project-info-reports_hu.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = Hozz\u00e1f\u00e9r\u00e9s
 report.ci-management.anthill.intro                                 = Ez a projekt {Anthill, http://www.anthillpro.com/html/products/anthillos/} rendszert haszn\u00C3\u00A1l.
 report.ci-management.bamboo.intro                                  = Ez a projekt {Bamboo, http://www.atlassian.com/software/bamboo/} rendszert haszn\u00C3\u00A1l.
