--- a/src/main/resources/project-info-reports_it.properties
+++ b/src/main/resources/project-info-reports_it.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = Accesso
 report.ci-management.anthill.intro                                 = Questo progetto usa {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.ci-management.bamboo.intro                                  = Questo progetto usa {Bamboo, http://www.atlassian.com/software/bamboo/}.
