--- a/src/main/resources/project-info-reports_ja.properties
+++ b/src/main/resources/project-info-reports_ja.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = \u30A2\u30AF\u30BB\u30B9
 report.ci-management.anthill.intro                                 = \u3053\u306E\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306F {Anthill, http://www.anthillpro.com/html/products/anthillos/} \u3092\u4F7F\u7528\u3057\u3066\u3044\u307E\u3059\u3002
 report.ci-management.bamboo.intro                                  = \u3053\u306E\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306F {Bamboo, http://www.atlassian.com/software/bamboo/} \u3092\u4F7F\u7528\u3057\u3066\u3044\u307E\u3059\u3002
