--- a/src/main/resources/project-info-reports_ko.properties
+++ b/src/main/resources/project-info-reports_ko.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = \uc811\uadfc
 report.ci-management.anthill.intro                                 = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Anthill, http://www.anthillpro.com/html/products/anthillos/}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.bamboo.intro                                  = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Bamboo, http://www.atlassian.com/software/bamboo/}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
