--- a/src/main/resources/project-info-reports_lt.properties
+++ b/src/main/resources/project-info-reports_lt.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = Prieiga
 report.ci-management.anthill.intro                                 = \u0160is projektas naudoja {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.ci-management.bamboo.intro                                  = \u0160is projektas naudoja {Bamboo, http://www.atlassian.com/software/bamboo/}.
