--- a/src/main/resources/project-info-reports_nl.properties
+++ b/src/main/resources/project-info-reports_nl.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.anthill.intro                                 = Dit project gebruikt {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.ci-management.bamboo.intro                                  = Dit project gebruikt {Bamboo, http://www.atlassian.com/software/bamboo/}.
 report.ci-management.buildforge.intro                              = Dit project gebruikt {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
