--- a/src/main/resources/project-info-reports_pt.properties
+++ b/src/main/resources/project-info-reports_pt.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = Acesso
 report.ci-management.anthill.intro                                 = Este projecto usa o {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.ci-management.bamboo.intro                                  = Este projecto usa o {Bamboo, http://www.atlassian.com/software/bamboo/}.
