--- a/src/main/resources/project-info-reports_sk.properties
+++ b/src/main/resources/project-info-reports_sk.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = Pr\u00edstup
 report.ci-management.anthill.intro                                 = Tento projekt pou\u017e\u00edva {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.ci-management.bamboo.intro                                  = Tento projekt pou\u017e\u00edva {Bamboo, http://www.atlassian.com/software/bamboo/}.
