--- a/src/main/resources/project-info-reports_sv.properties
+++ b/src/main/resources/project-info-reports_sv.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = \u00c5tkomst
 report.ci-management.anthill.intro                                 = Detta projekt anv\u00e4nder {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.ci-management.bamboo.intro                                  = Detta projekt anv\u00e4nder {Bamboo, http://www.atlassian.com/software/bamboo/}.
