--- a/src/main/resources/project-info-reports_tr.properties
+++ b/src/main/resources/project-info-reports_tr.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = Eri\u00feim
 report.ci-management.anthill.intro                                 = This project uses {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.ci-management.bamboo.intro                                  = This project uses {Bamboo, http://www.atlassian.com/software/bamboo/}.
