--- a/src/main/resources/project-info-reports_zh_CN.properties
+++ b/src/main/resources/project-info-reports_zh_CN.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = \u8BBF\u95EE
 report.ci-management.anthill.intro                                 = \u672C\u9879\u76EE\u4F7F\u7528 {Anthill, http://www.anthillpro.com/html/products/anthillos/}\u3002
 report.ci-management.bamboo.intro                                  = \u672C\u9879\u76EE\u4F7F\u7528 {Bamboo, http://www.atlassian.com/software/bamboo/}\u3002
