--- a/src/main/resources/project-info-reports_zh_TW.properties
+++ b/src/main/resources/project-info-reports_zh_TW.properties
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+# CHECKSTYLE_OFF: LineLength
+
 report.ci-management.access                                        = \u5b58\u53d6 (Access)
 report.ci-management.anthill.intro                                 = \u672c\u5c08\u6848\u4f7f\u7528 {Anthill, http://www.anthillpro.com/html/products/anthillos/}\u3002
 report.ci-management.bamboo.intro                                  = \u672c\u5c08\u6848\u4f7f\u7528 {Bamboo, http://www.atlassian.com/software/bamboo/}\u3002
