--- a/src/main/resources/project-info-reports_zh_CN.properties
+++ b/src/main/resources/project-info-reports_zh_CN.properties
@@ -1,19 +1,19 @@
-# \u8BB8\u53EF\u8BC1d to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  \u53C2\u89C1 the NOTICE file
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
 # distributed with this work for additional information
 # regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache \u8BB8\u53EF\u8BC1, Version 2.0 (the
-# "\u8BB8\u53EF\u8BC1"); you may not use this file except in compliance
-# with the \u8BB8\u53EF\u8BC1.  You may obtain a copy of the \u8BB8\u53EF\u8BC1 at
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
 #
 #  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
-# software distributed under the \u8BB8\u53EF\u8BC1 is distributed on an
+# software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-# KIND, either express or implied.  \u53C2\u89C1 the \u8BB8\u53EF\u8BC1 for the
+# KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
-# under the \u8BB8\u53EF\u8BC1.
+# under the License.
 
 report.ci-management.access                                        = \u8BBF\u95EE
 report.ci-management.anthill.intro                                 = \u672C\u9879\u76EE\u4F7F\u7528  {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
@@ -145,7 +145,7 @@ report.issue-management.overview.title                             = \u6982\u8FF
 report.issue-management.scarab.intro                               = \u672C\u9879\u76EE\u4F7F\u7528 {Scarab, http://scarab.tigris.org/}\u3002
 report.issue-management.title                                      = \u95EE\u9898\u8DDF\u8E2A
 report.licenses.description                                        = \u8FD9\u662F\u5173\u4E8E\u672C\u9879\u76EE\u8BB8\u53EF\u8BC1\u7684\u5B9A\u4E49\u3002
-report.licenses.multiple                                           = This project is provided under multiple licenses:
+report.licenses.multiple                                           = \u8fd9\u4e2a\u9879\u76ee\u4e0b\u63d0\u4f9b\u591a\u4e2a\u8bb8\u53ef\u8bc1\u003a
 report.licenses.name                                               = \u9879\u76EE\u8BB8\u53EF\u8BC1
 report.licenses.nolicense                                          = \u672C\u9879\u76EE\u6CA1\u6709\u5B9A\u4E49\u9879\u76EE\u8BB8\u53EF\u8BC1\u3002
 report.licenses.overview.intro                                     = \u4E00\u822C\u6765\u8BF4\uFF0C\u9879\u76EE\u4E2D\u6240\u5217\u7684\u8BB8\u53EF\u8BC1\u4EC5\u5BF9\u9879\u76EE\u81EA\u8EAB\u800C\u8A00\uFF0C\u4E0D\u5305\u62EC\u9879\u76EE\u7684\u4F9D\u8D56\u3002
