[MPIR-435] Custom bundle sometimes not loaded due to parent-first class loading
This closes #48

--- a/src/it/full-pom/src/site/custom/project-info-reports_fr.properties
+++ b/src/it/full-pom/src/site/custom/project-info-reports_fr.properties
@@ -15,4 +15,4 @@
 # specific language governing permissions and limitations
 # under the License.
 
-report.mailing-lists.intro = mail list intro text foo
+report.mailing-lists.intro = mail list intro text foo ("fr")
