[MPIR-451] Rename "Dependency Information" to "Maven Coordinates"
This closes #67

--- a/src/main/resources/project-info-reports_de.properties
+++ b/src/main/resources/project-info-reports_de.properties
@@ -127,8 +127,8 @@ report.dependency-convergence.stats.conflicting                    = Anzahl Arte
 report.dependency-convergence.stats.snapshots                      = Anzahl SNAPSHOT-Artefakte (NOS):
 report.dependency-convergence.stats.modules                        = Anzahl Module:
 report.dependency-convergence.title                                = Konvergenz der Abh\u00e4ngigkeiten
-report.dependency-info.name                                        = Abh\u00e4ngigkeiten Information
-report.dependency-info.title                                       = Abh\u00e4ngigkeiten Information
+report.dependency-info.name                                        = Maven-Koordinaten
+report.dependency-info.title                                       = Maven-Koordinaten
 report.dependency-info.description                                 = In diesem Dokument sind Informationen enthalten, wie dieses Projekt als Abh\u00e4ngigkeit zu anderen Dependency-Management-Tools hinzugef\u00fcgt werden kann.
 report.index.nodescription                                         = Derzeit existiert keine Beschreibung f\u00fcr dieses Projekt.
 report.index.title                                                 = Willkommen bei
