--- a/src/main/resources/project-info-reports_es.properties
+++ b/src/main/resources/project-info-reports_es.properties
@@ -117,8 +117,8 @@ report.dependency-convergence.stats.readyrelease.success           = \u00c9xito
 report.dependency-convergence.stats.snapshots                      = N\u00famero de Artefactos SNAPSHOT  (NDS):
 report.dependency-convergence.stats.modules                        = N\u00famero de Subproyectos:
 report.dependency-convergence.title                                = Convergencia de Dependencias en el Reactor
-report.dependency-info.name                                        = Informaci\u00f3n de Dependencias
-report.dependency-info.title                                       = Informaci\u00f3n de Dependencias
+report.dependency-info.name                                        = Coordenadas de Maven
+report.dependency-info.title                                       = Coordenadas de Maven
 report.dependency-info.description                                 = Este documento describe c\u00f3mo incluir este proyecto como una dependencia utilizando distintas herramientas de gesti\u00f3n de dependencias.
 report.index.nodescription                                         = A\u00FAn no se ha escrito una descripci\u00F3n para este proyecto.
 report.index.title                                                 = Bienvenido a
