--- a/src/main/resources/project-info-reports_fr.properties
+++ b/src/main/resources/project-info-reports_fr.properties
@@ -117,8 +117,8 @@ report.dependency-convergence.stats.readyrelease.success           = Succ\u00e8s
 report.dependency-convergence.stats.snapshots                      = Nombre d'artefacts SNAPSHOT (NOS)\u202f:
 report.dependency-convergence.stats.modules                        = Nombre de sous-projets\u202f:
 report.dependency-convergence.title                                = R\u00e9action de la convergence des d\u00e9pendances
-report.dependency-info.name                                        = Informations de d\u00e9pendance
-report.dependency-info.title                                       = Informations de d\u00e9pendance
+report.dependency-info.name                                        = Coordonn\u00e9es de Maven
+report.dependency-info.title                                       = Coordonn\u00e9es de Maven
 report.dependency-info.description                                 = Ce document pr\u00e9sente la mani\u00e8re d'ajouter ce projet en tant que d\u00e9pendance avec diff\u00e9rents outils de gestion des d\u00e9pendances.
 report.index.nodescription                                         = Il n'y a aucune description actuellement li\u00e9e \u00e0 ce projet.
 report.index.title                                                 = Bienvenue dans le projet
