[MPIR-455] dependencies goal: add support for multi-release JARs
This closes #70

--- a/src/main/resources/project-info-reports_es.properties
+++ b/src/main/resources/project-info-reports_es.properties
@@ -67,6 +67,8 @@ report.dependencies.file.details.column.size                       = Tama\u00f1o
 report.dependencies.file.details.column.size.gb                    = GB
 report.dependencies.file.details.column.size.mb                    = MB
 report.dependencies.file.details.column.size.kb                    = kB
+report.dependencies.file.details.multirelease.root                 = Ra\u00edz
+report.dependencies.file.details.multirelease.versioned            = Versionado
 report.dependencies.file.details.title                             = Detalles del Fichero
 report.dependencies.file.details.total                             = Total
 report.dependencies.graph.tables.licenses                          = Licencias
