--- a/src/main/resources/project-info-reports_de.properties
+++ b/src/main/resources/project-info-reports_de.properties
@@ -69,6 +69,8 @@ report.dependencies.file.details.column.size.gb                    = GB
 report.dependencies.file.details.column.size.mb                    = MB
 report.dependencies.file.details.column.size.kb                    = kB
 report.dependencies.file.details.columntitle.debuginformation      = Gibt an, ob diese Abhängigkeiten mit Debug-Informationen kompiliert wurden.
+report.dependencies.file.details.multirelease.root                 = Wurzel
+report.dependencies.file.details.multirelease.versioned            = Versioniert
 report.dependencies.file.details.title                             = Details zu den Abh\u00e4ngigkeiten
 report.dependencies.file.details.total                             = Gesamt
 report.dependencies.graph.icon.close                               = [schlie\u00dfen]
